<resources>
    <string name="AP_RPT_ACCEL_ERR">加速度计异常，请重启飞行器</string>
    <string name="AP_RPT_APP_UNCONNECT">飞行前请先连接App</string>
    <string name="AP_RPT_ATTITUDE">飞行器摆放不平或颠簸</string>
    <string name="AP_RPT_ATT_OVERFLOW">保留异常</string>
    <string name="AP_RPT_BARO_ERR">气压计异常，请重启飞行器</string>
    <string name="AP_RPT_CYRO_ERROR">陀螺仪异常，请重启飞行器</string>
    <string name="AP_RPT_Compass_Err">指南针异常，请重启飞行器</string>
    <string name="AP_RPT_DATA_INVALID">禁飞区数据异常，请升级禁飞区</string>
    <string name="AP_RPT_ERR_PILOT_MODE">此模式下不能使用此功能</string>
    <string name="AP_RPT_GEO_FENCE">超出飞行限制</string>
    <string name="AP_RPT_GPS_ERR">GPS异常，请重启飞行器</string>
    <string name="AP_RPT_HAS_TAKEN_OFF">飞行器飞行中，无法执行</string>
    <string name="AP_RPT_Home_Not_Set">home点未成功设置，无法执行</string>
    <string name="AP_RPT_INVALID_CMD">很抱歉，指令无法执行</string>
    <string name="AP_RPT_Is_LANDING">飞行器正在降落中，无法执行</string>
    <string name="AP_RPT_LOGIC_ERROR">指令过快，无法执行</string>
    <string name="AP_RPT_LOG_START_FAILED">系统初始化异常，请重启飞行器</string>
    <string name="AP_RPT_MODE_TRANS_REJECT">当前模式不支持切换</string>
    <string name="AP_RPT_MOTOR_LOCK">电机被锁止，请检查电机状态</string>
    <string name="AP_RPT_NEED_NEW_COOR">未成功设置航点，建议重新设置</string>
    <string name="AP_RPT_NON_AUTO_MODE">飞行器处于姿态模式，无法定位</string>
    <string name="AP_RPT_NOT_IN_AP_MODE">当前不处于自动飞行模式</string>
    <string name="AP_RPT_NO_FLY_ZONE">禁飞区内禁止飞行</string>
    <string name="AP_RPT_NO_WAY_POINT">航点异常，建议重新规划航点</string>
    <string name="AP_RPT_ON_Calibration">系统处于校准中，请稍等</string>
    <string name="AP_RPT_PARA_ERR">参数错误，请重新尝试</string>
    <string name="AP_RPT_PHASE_LANDING">飞行器处于降落阶段</string>
    <string name="AP_RPT_PHASE_TAKE_OFF">飞行器处于起飞阶段</string>
    <string name="AP_RPT_RC_LOST">飞行前请先连接遥控器</string>
    <string name="AP_RPT_RTH_ING">飞行器正在返航中</string>
    <string name="AP_RPT_RTH_KEY_SET">自动返航键在返航位置，请向左拨动</string>
    <string name="AP_RPT_STICKY_NEUTRAL">遥控器需要校准</string>
    <string name="AP_RPT_Vpu">飞行器处于光流模式，无法定位</string>
    <string name="AT_RPT_LOGIC">飞行器升级中，请稍等</string>
    <string name="AT_RPT_STICK_NEUTAL">飞行器自动起飞，请不要打摇杆</string>
    <string name="GC_caliFail_discon">请先连接遥控器再进行校准</string>
    <string name="GC_caliFail_discon_drone">请先连接飞行器再进行校准</string>
    <string name="GC_caliSucess">校准成功</string>
    <string name="GC_calibrationing">云台自动校准中，请等待</string>
    <string name="GC_califail">校准失败</string>
    <string name="GC_hight_Vibrator">云台震动太大</string>
    <string name="GC_hight_temperature">云台温度过高，待温度正常后再进行校准</string>
    <string name="GC_horLine_uneven">云台未水平放置</string>
    <string name="GC_low_temperature">云台温度太低，适当预热后再进行校准</string>
    <string name="GC_temperature_low_accuracy">云台温度波动较大，待温度稳定后再进行校准</string>
    <string name="GC_wrong_angle">云台角度不正确</string>
    <string name="LOW_POWER">飞行器电量不足，请尽快降落</string>
    <string name="Not_IN_AIR">请起飞飞行器</string>
    <string name="SSID">SSID</string>
    <string name="about">关于</string>
    <string name="about_left_stick">了解左摇杆</string>
    <string name="about_mark">去评分</string>
    <string name="about_motor">启动和停止电机</string>
    <string name="about_right_stick">了解右摇杆</string>
    <string name="about_version">小米无人机 %s</string>
    <string name="account">账户</string>
    <string name="actionpause">暂停</string>
    <string name="actionresume">恢复</string>
    <string name="after_upgrade">以后再说</string>
    <string name="after_upgrade_down">稍后下载</string>
    <string name="again_exit">再按一次退出</string>
    <string name="aggree_milletr">登录则表示您同意遵守小米的</string>
    <string name="agreement_privacy">用户协议</string>
    <string name="agreement_shengming">免责声明</string>
    <string name="agreement_yu">与</string>
    <string name="all_capacity">电池容量 :</string>
    <string name="angle_limit">角度限制</string>
    <string name="anticlockwise_angle">逆时针</string>
    <string name="apk_downing">apk在下载升级中</string>
    <string name="app_name">小米无人机</string>
    <string name="assist_the_location_mode_to_open_please_be_careful_to_fly">" 您正在打开辅助定位模式(VPU)，请仔细
 阅读以下内容：
 1.请在光线大于15Lx、地面纹理清晰且宽
 阔的地方飞行，限高0.5米~2.5米，否则有
 危险性。
 2.飞行时，辅助定位模式无效时飞行器会
 自动切换到姿态模式，需要您有姿态模式
 下的飞行经验和技巧，才能安全飞行。
 3.任何室内飞行引起的意外事故，都不在
 无人机保险范围之内，请安装保护架谨慎
 飞行。"</string>
    <string name="attfling">飞行中(ATTI)</string>
    <string name="attibase">可以起飞(ATTI)</string>
    <string name="auto_land">自动降落</string>
    <string name="autoreturnto">自动返航</string>
    <string name="baibaoxiang">百宝箱</string>
    <string name="baibaoxiang_des">更多更有趣的一键控制功能都在这个百宝箱里呢</string>
    <string name="battery">电池</string>
    <string name="battery_des">"实时观察飞行器电量
电量低于30%进入低电模式，飞行器就该返航啦"</string>
    <string name="battery_endurance">续航时间 :</string>
    <string name="battery_four">电芯4电压 :</string>
    <string name="battery_info">电池信息</string>
    <string name="battery_life">电池寿命 :</string>
    <string name="battery_one">电芯1电压 :</string>
    <string name="battery_three">电芯3电压 :</string>
    <string name="battery_title">飞行器电量</string>
    <string name="battery_two">电芯2电压 :</string>
    <string name="begincalibration">开始校准</string>
    <string name="begincalocomremider">保持起落架打开，勿握住起落架，并远离金属和强干扰区域</string>
    <string name="cali_fail_please_connect_remote">校准失败，请连接遥控器</string>
    <string name="calibrate_remote">遥控器校准</string>
    <string name="calibration_failure">校准失败，请重新校准</string>
    <string name="calibration_remote">遥控器校准</string>
    <string name="calicompasscoming">飞机处于指南针校准中，请重启飞行器后重试</string>
    <string name="calicompassesucess">指南针校准完成</string>
    <string name="calicompasstitle">校准指南针</string>
    <string name="calicomsucess">指南针校准完成，请等待飞行器自动重启</string>
    <string name="calicpmssing">飞行器处于指南针校准中，请重启飞行器</string>
    <string name="calidisconremote">请先连接遥控器再进行校准</string>
    <string name="calierror">指南针校准超时失败，请严格按图示校准</string>
    <string name="calierrordata">校准失败，请注意周围环境磁场干扰</string>
    <string name="califail">校准失败</string>
    <string name="caligcremider">为确保安全，飞行状态中无法进行校准</string>
    <string name="calireming">遥控器校准中...</string>
    <string name="caliremotefail">校准遥控器失败</string>
    <string name="caliremotesucess">遥控器校准完成</string>
    <string name="calirocker">将摇杆分别按照图示的四个方向推拉到最大程度几次，</string>
    <string name="calirocker2">直到显示的摇杆位置与实际相符</string>
    <string name="calirockertitle">摇杆校准</string>
    <string name="calisiacondrone">请连接飞行器，再进行校准</string>
    <string name="calisucess">校准成功</string>
    <string name="caliwhell">滚轮校准</string>
    <string name="calremotewaringfly">为确保安全，飞行状态中无法进行校准</string>
    <string name="camera">相机</string>
    <string name="camera_Lens_AC">镜头畸变校正</string>
    <string name="camera_connect_state_fail">相机连接状态错误</string>
    <string name="camera_disconnect">摄像头异常，无法定位</string>
    <string name="camera_disconnect_sky">摄像头异常，请尽快降落</string>
    <string name="camera_reset_factory_mode">恢复出厂设置</string>
    <string name="camera_sd_format">格式化 TF 卡</string>
    <string name="camera_setting">相机设置</string>
    <string name="camera_tf_space_detail">相机内无TF卡或容量不足</string>
    <string name="camera_version">相机版本：</string>
    <string name="camera_video_quality">视频质量</string>
    <string name="camera_video_resolution">视频分辨率</string>
    <string name="can_fly_by_hand">可手动起飞</string>
    <string name="can_takeOff_ATTi">可以起飞姿态模式</string>
    <string name="can_takeOff_GLOBAL">可以起飞GPS模式</string>
    <string name="can_takeOff_Local">可以起飞光流模式</string>
    <string name="cancel">取消</string>
    <string name="cancel_downing">正在下载固件,再按一次取消下载</string>
    <string name="cancel_upgrade">不升级了</string>
    <string name="cant_action_flyto">光流或姿态模式不能设置指点</string>
    <string name="cant_action_interest">光流或姿态模式不能设置兴趣点</string>
    <string name="cant_action_tajephoto">光流或姿态模式不能设置自拍功能</string>
    <string name="cant_action_waypoint">光流或姿态模式不能设置航线</string>
    <string name="cant_fly_takePhoto_VPU">当前处于VPU模式，无法执行自拍功能</string>
    <string name="cant_fly_takePhoto_atti">当前处于姿态模式，无法执行自拍功能</string>
    <string name="cant_setPoi">无法设置兴趣点</string>
    <string name="capture_success">抓拍成功</string>
    <string name="change_contype_ATTi">飞行器切到姿态模式</string>
    <string name="change_contype_GLOBAL">飞行器切到GPS模式</string>
    <string name="change_contype_Local">飞行器切到光流模式</string>
    <string name="check_tf_card_must_format">检测到TF卡需要格式化</string>
    <string name="checking_firmware">正在检查硬件</string>
    <string name="checking_hard">正在检查连接</string>
    <string name="checking_update">正在检查更新......</string>
    <string name="checkupdate">检查更新</string>
    <string name="choose_recoker_mode_msg">"改变摇杆模式将直接影响对飞行器
的操作逻辑，请确认是否切换？"</string>
    <string name="clockwise_angle">顺时针</string>
    <string name="close_plane_switch_rocket">请先关闭飞行器电源，再切换遥控器模式</string>
    <string name="close_plane_to_remote_cali">请先关闭飞行器电源，再进行遥控器校准</string>
    <string name="closedrone">请重启飞行器后再重试指南针校准</string>
    <string name="cloud_camer_angle_des">云台俯仰角:</string>
    <string name="cloud_platform_upgrade">云台升级</string>
    <string name="comalding">完成自动降落</string>
    <string name="commit_crash_msg">系统已经将崩溃信息发送至服务器，我们会尽快解决该问题！</string>
    <string name="commit_ing">正在提交!</string>
    <string name="compass_calibration">指南针校准</string>
    <string name="compass_hor">水平校准</string>
    <string name="compass_hor_calibration">指南针水平校准中...</string>
    <string name="compass_ver">垂直校准</string>
    <string name="compass_ver_calibration">指南针垂直校准中...</string>
    <string name="compasscgerror">校准前请把飞行器水平放稳</string>
    <string name="complete">完成</string>
    <string name="comtakeoff">完成自动起飞</string>
    <string name="comtohome">完成自动返航</string>
    <string name="condrone">已连接飞行器</string>
    <string name="confirm">确定</string>
    <string name="connect_drone_update">请连接所有设备，进行升级</string>
    <string name="connect_hardware">按照说明书连接产品及配件</string>
    <string name="connect_ipone_remote">用 USB 线连接遥控器和手机</string>
    <string name="connect_plane">连接飞行器</string>
    <string name="connect_rn">立即连接</string>
    <string name="connectagain">重连</string>
    <string name="connectdefault">请连接遥控器</string>
    <string name="contactlimit">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.-@</string>
    <string name="controller_des">"在距离远或干扰多的环境下，信号质量会减弱，
飞行器可能会失联或者画面模糊哟。"</string>
    <string name="controller_title">遥控信号、图传信号</string>
    <string name="country_code">国家码</string>
    <string name="error_status_des">"实时监测飞行器的故障状态
任何问题都能从这里看到哟"</string>
    <string name="error_title">状态和故障栏</string>
    <string name="fc_version">飞控版本：</string>
    <string name="finish">确定</string>
    <string name="fly_action_tip">"设定航线飞行时，请注意设定飞行器的飞行
高度，尽量选在宽阔场地，避开人群、高楼、
树木、高压线、 信号塔等障碍物，以免发生
危险。"</string>
    <string name="gimbal_version">云台版本：</string>
    <string name="goback">返回</string>
    <string name="gps">GPS</string>
    <string name="gps_des">"GPS精度的高低，直接影响飞行器的安全性
在干扰较少的环境下飞行吧"</string>
    <string name="ignoreflytip">  不再提醒</string>
    <string name="land">登录</string>
    <string name="location_des">飞行时，点我随时可以切换到飞机跟随显示模式 </string>
    <string name="miaircraft">小米无人机</string>
    <string name="modle_des">"根据实时需求，灵活地切换航拍模式和地图模式
简单，便捷"</string>
    <string name="modle_title">航拍模式/地图模式</string>
    <string name="my_location">我的位置</string>
    <string name="new_hand_finish">完成！</string>
    <string name="new_hand_isfinish">通过前面学习，现在您学会了吗？</string>
    <string name="nofly_version">禁飞区版本：</string>
    <string name="notneedlogin"><u>暂不登录</u></string>
    <string name="rc_version">遥控器版本：</string>
    <string name="restartdrone">请手动重启飞行器</string>
    <string name="servo_version">伺服版本：</string>
    <string name="setting">设置</string>
    <string name="setting_stauts_des">更多无人机的相关设置，都在这呢</string>
    <string name="study_again">再学一次</string>
    <string name="tips_dialog_title">温馨提示</string>
    <string name="try_fly">试飞</string>
    <string name="updatefail">固件升级失败！</string>
    <string name="upgrade_future">暂时不升级也可以继续飞行</string>
    <string name="upgrade_sendorder_delay">重试</string>
    <string name="vetelcalicom">竖直校准完成!</string>
    <string name="welcomuseing">欢迎使用</string>
    <string name="x2_version">光流版本：</string>
    <string name="x6_version">中继版本：</string>
</resources>