<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.view.percent.PercentRelativeLayout app:orientation="1" app:id="@id/activity_general_setting" app:background="#ff1f1f21" app:layout_width="-1" app:layout_height="-1"
    <com.fimi.kernel.view.percent.PercentRelativeLayout app:id="@id/aboutRelativeLayout" app:background="#2a2a2a" app:layout_width="-1" app:layout_height="0dp" app:layout_heightPercent="13.79%">
        <Button app:id="@id/aboutBtn" app:background="@drawable/btn_setting_back_selector" app:layout_width="0dp" app:layout_height="0dp" app:layout_centerVertical="true" app:layout_widthPercent="57.7%h" app:layout_heightPercent="57.7%h" app:layout_marginLeftPercent="1.71%" />
        <TextView app:textColor="#ffffffff" app:id="@id/aboutTitle" app:layout_width="-2" app:layout_height="-2" app:text="@string/about" app:layout_centerHorizontal="true" app:layout_centerVertical="true" app:layout_textSizePercent="28.1%" />
    </com.fimi.kernel.view.percent.PercentRelativeLayout>
    <TextView app:id="@id/about_line" app:background="#4a4a4a" app:layout_width="-1" app:layout_height="1dp" app:layout_below="@id/aboutRelativeLayout" app:layout_heightPercent="0.2%h" />
    <ImageView app:id="@id/aboutImg" app:background="@drawable/logo_icon" app:layout_width="-2" app:layout_height="-2" app:layout_marginTop="34.5dp" app:layout_below="@id/about_line" app:layout_centerHorizontal="true" />
    <TextView app:textSize="14sp" app:textColor="#80ffffff" app:id="@id/aboutVersion" app:layout_width="-2" app:layout_height="-2" app:text="@string/about_version" app:layout_below="@id/aboutImg" app:layout_centerHorizontal="true" app:layout_marginTopPercent="3.65%" />
    <LinearLayout app:layout_width="-2" app:layout_height="-2" app:layout_marginTop="7dp" app:layout_below="@id/aboutVersion" app:layout_centerHorizontal="true"
        <LinearLayout app:orientation="1" app:layout_width="-2" app:layout_height="-2"
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView app:id="@id/tv_fc_tip" app:text="@string/fc_version" style="@style/version_font_text" />
                <TextView app:id="@id/tv_fc" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView app:id="@id/tv_x6_tip" app:text="@string/x6_version" style="@style/version_font_text" />
                <TextView app:id="@id/tv_x6" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView app:id="@id/tv_x2_tip" app:text="@string/x2_version" style="@style/version_font_text" />
                <TextView app:id="@id/tv_x2" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView app:id="@id/tv_rc_tip" app:text="@string/rc_version" style="@style/version_font_text" />
                <TextView app:id="@id/tv_rc" style="@style/version_display_text" />
            </LinearLayout>
        </LinearLayout>
        <View app:layout_width="45dp" app:layout_height="1dp" />
        <LinearLayout app:orientation="1" app:layout_width="-2" app:layout_height="-2"
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView app:id="@id/tv_camera_tip" app:text="@string/camera_version" style="@style/version_font_text" />
                <TextView app:id="@id/tv_camera" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView app:id="@id/tv_gimbal_tip" app:text="@string/gimbal_version" style="@style/version_font_text" />
                <TextView app:id="@id/tv_gimbal" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView app:id="@id/tv_servo_tip" app:text="@string/servo_version" style="@style/version_font_text" />
                <TextView app:id="@id/tv_servo" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView app:id="@id/tv_nofly_tip" app:text="@string/nofly_version" style="@style/version_font_text" />
                <TextView app:id="@id/tv_nofly" style="@style/version_display_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button app:textSize="12sp" app:textColor="#80ffffff" app:gravity="11" app:id="@id/scoreBtn" app:background="@drawable/assess_btn_selector" app:paddingTop="6dp" app:layout_width="115.33dp" app:layout_height="30sp" app:layout_marginBottom="46dp" app:text="@string/about_mark" app:layout_alignParentBottom="true" app:layout_centerHorizontal="true" />
    <LinearLayout app:orientation="0" app:layout_width="-2" app:layout_height="-2" app:layout_marginBottom="14dp" app:layout_alignParentBottom="true" app:layout_centerHorizontal="true">
        <TextView app:textSize="10sp" app:textColor="#33ffffff" app:id="@id/copyright" app:layout_width="-2" app:layout_height="-2" app:text="Copyright © 2015-2016 Fimi, All Rights Reserved. | " />
        <TextView app:textSize="10sp" app:textColor="#33ffffff" app:id="@id/agreementshengming_tv" app:layout_width="-2" app:layout_height="-2" app:text="@string/agreement_shengming" />
    </LinearLayout>
</com.fimi.kernel.view.percent.PercentRelativeLayout>
