<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.view.percent.PercentRelativeLayout app:orientation="1" app:id="@id/login_rl" app:layout_width="-1" app:layout_height="-1"
    <com.fimi.kernel.view.percent.PercentRelativeLayout app:layout_width="-1" app:layout_height="-1" app:layout_alignParentRight="true" app:layout_marginLeftPercent="53.17%w">
        <TextView app:textSize="17sp" app:textColor="#80ffffff" app:gravity="11" app:id="@id/welcom_tv" app:layout_width="0dp" app:layout_height="0dp" app:text="@string/welcomuseing" app:layout_widthPercent="71.29%h" app:layout_heightPercent="7%" app:layout_marginTopPercent="12.37%" app:layout_textSizePercent="4.7%" />
        <TextView app:textStyle="1" app:textColor="#ccffffff" app:gravity="11" app:id="@id/miaircraft_tv" app:layout_width="0dp" app:layout_height="-2" app:text="@string/miaircraft" app:layout_widthPercent="71.29%h" app:layout_marginTopPercent="18.29%h" app:layout_textSizePercent="7.5%" />
        <Button app:textColor="#e6ffffff" app:id="@id/register_bt" app:background="@drawable/login_btn_selector" app:visibility="1" app:layout_width="0dp" app:layout_height="0dp" app:text="@string/land" app:layout_below="@id/miaircraft_tv" app:layout_widthPercent="71.29%h" app:layout_heightPercent="11.5%" app:layout_marginTopPercent="18%" app:layout_textSizePercent="3.8%" />
        <Button app:textColor="#b2ffffff" app:gravity="11" app:id="@id/login_bt" app:background="@drawable/login_btn_selector" app:layout_width="0dp" app:layout_height="0dp" app:text="@string/land" app:layout_below="@id/register_bt" app:layout_widthPercent="71.29%h" app:layout_heightPercent="11.13%" app:layout_marginTopPercent="4.6%" app:layout_textSizePercent="3.8%" />
        <TextView app:textColor="#33ffffff" app:id="@id/loginmillet_tv" app:layout_width="-2" app:layout_height="-2" app:text="@string/aggree_milletr" app:layout_below="@id/login_bt" app:layout_marginTopPercent="5%" app:layout_textSizePercent="3.4%" />
        <TextView app:textColor="#4cffffff" app:id="@id/agreementprivacy_tv" app:layout_width="-2" app:layout_height="-2" app:text="@string/agreement_privacy" app:layout_toRightOf="@id/loginmillet_tv" app:layout_below="@id/login_bt" app:layout_marginTopPercent="5.27%" app:layout_textSizePercent="3.2%" />
        <TextView app:textColor="#4cffffff" app:id="@id/agreement_tv" app:layout_width="-2" app:layout_height="-2" app:text="@string/agreement_yu" app:layout_toRightOf="@id/agreementprivacy_tv" app:layout_below="@id/login_bt" app:layout_marginTopPercent="5.27%" app:layout_textSizePercent="3.2%" />
        <TextView app:textColor="#4cffffff" app:id="@id/agreementshengming_tv" app:layout_width="-2" app:layout_height="-2" app:text="@string/agreement_shengming" app:layout_toRightOf="@id/agreement_tv" app:layout_below="@id/login_bt" app:layout_marginTopPercent="5.27%" app:layout_textSizePercent="3.2%" />
        <TextView app:textColor="#4cffffff" app:id="@id/nologin_tv" app:visibility="1" app:layout_width="-2" app:layout_height="0dp" app:text="@string/notneedlogin" app:layout_below="@id/loginmillet_tv" app:layout_heightPercent="5.9%" app:layout_marginLeftPercent="29.26%h" app:layout_marginTopPercent="5.24%" app:layout_textSizePercent="3.2%" />
    </com.fimi.kernel.view.percent.PercentRelativeLayout>
    <RelativeLayout app:id="@id/login_progress_rl" app:background="#bf000000" app:visibility="1" app:layout_width="-1" app:layout_height="-1">
        <ProgressBar app:id="@id/progressBar" app:layout_width="40dp" app:layout_height="40dp" app:indeterminate="true" app:indeterminateDrawable="@drawable/progress_login" app:layout_centerHorizontal="true" app:layout_centerVertical="true" />
    </RelativeLayout>
</com.fimi.kernel.view.percent.PercentRelativeLayout>
