<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:background="@drawable/update_failed_bg" android:layout_width="-1" android:layout_height="-1">
    <ImageView android:layout_gravity="1" android:id="@id/upgrade_iv" android:background="@drawable/update_waining" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="70dp" />
    <TextView android:textSize="16.7sp" android:textColor="#b4ffffff" android:layout_gravity="1" android:id="@id/upgradeResult" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="22dp" android:text="@string/updatefail" />
    <TextView android:textSize="12sp" android:textColor="#43ffffff" android:layout_gravity="1" android:id="@id/failedText" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="4.67dp" android:text="@string/upgrade_future" />
    <LinearLayout android:layout_gravity="1" android:orientation="0" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="47.7dp">
        <Button android:id="@id/noconnect_bt" android:background="@drawable/btn_left_choose" android:text="@string/cancel_upgrade" style="@style/btn_choose_left_style" />
        <Button android:id="@id/retry_btn" android:background="@drawable/btn_right_choose" android:text="@string/upgrade_sendorder_delay" style="@style/btn_choose_right_style" />
    </LinearLayout>
</LinearLayout>
