<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.view.percent.PercentRelativeLayout app:background="@drawable/bg_dialog" app:layout_width="-1" app:layout_height="-1">
    <TextView app:textSize="14dp" app:textColor="@color/black" app:id="@id/title" app:layout_width="-2" app:layout_height="-2" app:text="@string/tips_dialog_title" app:layout_centerHorizontal="true" app:layout_marginTopPercent="8.3333%h" />
    <TextView app:textSize="14dp" app:textColor="@color/black" app:id="@id/action_tip" app:layout_width="-2" app:layout_height="-2" app:text="@string/fly_action_tip" app:layout_below="@id/title" app:lineSpacingExtra="3.5dp" app:alpha="0.8" app:layout_marginLeftPercent="10.37%h" app:layout_marginTopPercent="5.185%h" />
    <RadioButton app:textSize="12dp" app:textColor="@color/black" app:gravity="11" app:id="@id/remeber_tip" app:layout_width="-2" app:layout_height="-2" app:button="@drawable/flyactiontip_radiobutton_bg" app:text="@string/ignoreflytip" app:layout_below="@id/action_tip" app:layout_marginLeftPercent="10.37%h" app:layout_marginTopPercent="5.556%h" />
    <Button app:textSize="14sp" app:textColor="@color/black_80" app:gravity="11" app:id="@id/single_btn" app:background="@drawable/btn_dialog_center_selector" app:layout_width="-1" app:layout_height="52.3dp" app:text="@string/finish" app:layout_below="@id/remeber_tip" app:layout_marginTopPercent="7.4074%h" />
</com.fimi.kernel.view.percent.PercentRelativeLayout>
