<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.view.percent.PercentRelativeLayout app:background="#202020" app:layout_width="-1" app:layout_height="-1">
    <TextView app:textSize="@dimen/calicompass" app:textColor="@color/white" app:id="@id/title" app:layout_width="-2" app:layout_height="-2" app:text="@string/calicompasstitle" app:layout_centerHorizontal="true" app:alpha="0.9" app:layout_marginTopPercent="7.5925%h" />
    <TextView app:background="#4a4a4a" app:layout_width="-1" app:layout_height="0dp" app:layout_below="@id/heardView" app:layout_heightPercent="0.2%h" />
    <TextView app:textSize="@dimen/descalicompass" app:textColor="@color/white" app:id="@id/descompass" app:layout_width="-2" app:layout_height="-2" app:text="@string/vetelcalicom" app:layout_below="@id/title" app:layout_centerHorizontal="true" app:alpha="0.5" app:layout_marginTopPercent="2.4%h" />
    <TextView app:textSize="@dimen/velcompasscom" app:textColor="#ff4e00" app:id="@id/descompasscom" app:layout_width="-2" app:layout_height="-2" app:text="@string/restartdrone" app:layout_centerHorizontal="true" app:layout_centerVertical="true" />
    <Button app:textSize="@dimen/remotcalinext" app:textColor="@color/white" app:gravity="11" app:id="@id/endcalicompass" app:background="@drawable/remotenext" app:layout_width="0dp" app:layout_height="0dp" app:text="@string/goback" app:layout_alignParentBottom="true" app:layout_centerHorizontal="true" app:layout_widthPercent="23.75%w" app:layout_heightPercent="10.370%h" app:layout_marginBottomPercent="6.4814%h" />
</com.fimi.kernel.view.percent.PercentRelativeLayout>
